changed expiry time

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location = /index.html {
-        expires 1d;
+        expires 1h;
     }
 
     error_page   500 502 503 504  /50x.html;
