--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
+        expires 1h;
     }
 
     error_page   500 502 503 504  /50x.html;
