moved expires into a separate location block

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,9 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \index.html$ {
         expires 10m;
     }
 
