--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,8 +8,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ~* \index.html$ {
+    location ~* \index.(htm?l)$ {
         expires 10m;
+        root  /usr/share/nginx/html;
+        index  index.html index.htm;
     }
 
     error_page   500 502 503 504  /50x.html;
