--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ~* \index.(htm?l)$ {
+    location ~* \index.html$ {
         expires 10m;
         root  /usr/share/nginx/html;
     }
