test using cache control header instead of expiry

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,11 +6,7 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
-    }
-
-    location ~* \index.html$ {
-        expires 2m;
-        root  /usr/share/nginx/html;
+        add header Cache-Control max-age=300;
     }
 
     error_page   500 502 503 504  /50x.html;
