--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,11 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control max-age=600;
+    }
+
+    location ~* \index.html$ {
+        expires 10m;
+        root  /usr/share/nginx/html;
     }
 
     error_page   500 502 503 504  /50x.html;
