cache status for debugging

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,7 @@ server {
 
     location ~* \index.html$ {
         expires 10m;
+        add_header X-Cache-Status $upstream_cache_status;
         root  /usr/share/nginx/html;
     }
 
