changed expiry to one day

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ~* \index.html$ {
-        expires 10m;
+        expires 1d;
         root  /usr/share/nginx/html;
     }
 
