changed expiry to epoch

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ~* \index.html$ {
-        expires 1d;
+        expires epoch;
         root  /usr/share/nginx/html;
     }
 
